--- a/style.css
+++ b/style.css
@@ -280,3 +280,94 @@ h4{
     background: #c40094;
     color: #fff;
 }
+.lvl-btns{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: baseline;
+    
+}
+.level-button1{
+    width: 260px;
+    height: 47px;
+    background: transparent;
+    border: 2px solid #c40094;
+    outline: none;
+    border-radius: 6px;
+    font-size: 16px;
+    color: #c40094;
+    font-weight: 600;
+    margin: 0 20px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+.level-button2{
+    width: 260px;
+    height: 47px;
+    background: #c4009329;
+    border: 2px solid #c40094;
+    outline: none;
+    border-radius: 6px;
+    font-size: 16px;
+    color: #c40094;
+    font-weight: 600;
+    margin: 0 20px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+.level-button3{
+    width: 260px;
+    height: 47px;
+    background: #c4009352;
+    border: 2px solid #c40094;
+    outline: none;
+    border-radius: 6px;
+    font-size: 16px;
+    color: #c40094;
+    font-weight: 600;
+    margin: 0 20px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+.level-button4{
+    width: 260px;
+    height: 47px;
+    background: #c400937a;
+    border: 2px solid #c40094;
+    outline: none;
+    border-radius: 6px;
+    font-size: 16px;
+    color: #c40094;
+    font-weight: 600;
+    margin: 0 20px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+.level-button5{
+    width: 260px;
+    height: 47px;
+    background: #c40094A6;
+    border: 2px solid #c40094;
+    outline: none;
+    border-radius: 6px;
+    font-size: 16px;
+    color: #c40094;
+    font-weight: 600;
+    margin: 0 20px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+.lvl button:hover{
+    color: #fff;
+    border: 2px solid #fff;
+}
+.lvl h6{
+    font-weight: 800;
+    font-size: 40px;
+    font-family: sans-serif;
+    text-align: left;
+    margin-left: 20px;
+}
+.lvl{
+    display: none;
+}
